--- a/ImageProcessing/ImageProcessing/ImageProcessing.vcxproj.filters
+++ b/ImageProcessing/ImageProcessing/ImageProcessing.vcxproj.filters
@@ -96,4 +96,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Rect.data">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Circ.data">
+      <Filter>Resource Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
