9:30 (eindeutig zu früh ^^)
finished impl.
EmptyFactory
Circle
CircleEmpty
CircleFilled
RectangleEmpty

Implemented destructors
Implemented default constructors

Testreiber zaht mi nima, der kumt späta dann amoi :D

--- a/ImageProcessing/ImageProcessing/ImageProcessing.vcxproj
+++ b/ImageProcessing/ImageProcessing/ImageProcessing.vcxproj
@@ -82,6 +82,7 @@
     <ClCompile Include="GraphicObject.cpp" />
     <ClCompile Include="Image.cpp" />
     <ClCompile Include="ImageManagment.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="Rectangle.cpp" />
     <ClCompile Include="RectangleEmpty.cpp" />
